--- a/flexBox/flexBox.html
+++ b/flexBox/flexBox.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-    <div class="cabecera">
+    <div class="cabeceraprincipal">
         <img src="img/logo.png" alt="logo">
-        <div class="menu">
+        <div class="menuprincipal">
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Cursos</a></li>
